force-app/main/default/objects/Player__c/fields/Is_Black_List__c.field-meta.xml
<CustomField>
    <fullName>Is_Black_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if the User is in the blacklist. No bets are allowed if true.</description>
    <label>Is Black List</label>
    <type>Checkbox</type>
</CustomField>