force-app/main/default/objects/Player__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( Is_Black_List__c , IMAGE(&quot;https://sandboxcom-a1-dev-ed.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0687Q000004Y7fr&amp;operationContext=CHATTER&amp;contentId=05T7Q00000IAwMb&quot;,&quot;Bandit&quot;), IF( Total_Money_Won__c &gt; 10000, IMAGE(&quot;https://sandboxcom-a1-dev-ed.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0687Q000004Y7fV&amp;operationContext=CHATTER&amp;contentId=05T7Q00000IAwKu&quot;,&quot;Diamond&quot;),  IF(Total_Money_Won__c &gt; 1000, IMAGE(&quot;https://sandboxcom-a1-dev-ed.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0687Q000004Y7fQ&amp;operationContext=CHATTER&amp;contentId=05T7Q00000IAwKk&quot;,&quot;Star&quot;),  IF(Total_Money_Won__c &lt; 0, IMAGE(&quot;https://sandboxcom-a1-dev-ed.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0687Q000004YEXq&amp;operationContext=CHATTER&amp;contentId=05T7Q00000IBM2L&quot;,&quot;Warning2&quot;), null) )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>