force-app/main/default/objects/Player__c/fields/Total_Money_Won__c.field-meta.xml
<CustomField>
    <fullName>Total_Money_Won__c</fullName>
    <description>All the money player won for all the times.</description>
    <label>Total Money Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>