force-app/main/default/objects/Player__c/listViews/PlayerName.listView-meta.xml
<ListView>
    <fullName>PlayerName</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Is_Black_List__c</columns>
    <columns>Email__c</columns>
    <columns>Total_Money_Won__c</columns>
    <columns>Risk_Level__c</columns>
    <filterScope>Mine</filterScope>
    <label>PlayerName</label>
</ListView>